language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_record_update.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

pub type Wibble { Wibble(one: Int, two: Int) }

pub fn main() {
  Wibble(..todo, one: 1)
  ↑                     
}

----- Jumped to `src/app.gleam`

pub type Wibble { Wibble(one: Int, two: Int) }
                  ↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  

pub fn main() {
  Wibble(..todo, one: 1)
}
