language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_record_update_spread_variable.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

pub type Wibble { Wibble(one: Int, two: Int) }

pub fn main() {
  let value = Wibble(one: 1, two: 2)
  Wibble(..value, two: 3)
           ↑             
}

----- Jumped to `src/app.gleam`

pub type Wibble { Wibble(one: Int, two: Int) }

pub fn main() {
  let value = Wibble(one: 1, two: 2)
      ↑▔▔▔▔                         
  Wibble(..value, two: 3)
}
