language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_same_module_constants.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

const x = 1

pub fn main() {
  x
  ↑
}

----- Jumped to `src/app.gleam`

const x = 1
↑▔▔▔▔▔▔    

pub fn main() {
  x
}
