language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_same_module_functions.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

fn add_2(x) {
  x + 2
}

pub fn main() {
  add_2(1)
  ↑       
}

----- Jumped to `src/app.gleam`

fn add_2(x) {
↑▔▔▔▔▔▔▔▔▔▔  
  x + 2
}

pub fn main() {
  add_2(1)
}
