language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_same_module_records.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

pub type Rec {
  Var1(Int)
  Var2(Int, Int)
}

pub fn main() {
  let a = Var1(1)
          ↑      
  let b = Var2(2, 3)
}

----- Jumped to `src/app.gleam`

pub type Rec {
  Var1(Int)
  ↑▔▔▔▔▔▔▔▔
  Var2(Int, Int)
}

pub fn main() {
  let a = Var1(1)
  let b = Var2(2, 3)
}
