language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_type.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

pub type Rec {
  Var1(Int)
  Var2(Int, Int)
}

pub fn make_var() -> Rec {
                     ↑    
  Var1(1)
}

----- Jumped to `src/app.gleam`

pub type Rec {
↑▔▔▔▔▔▔▔▔▔▔▔  
  Var1(Int)
  Var2(Int, Int)
}

pub fn make_var() -> Rec {
  Var1(1)
}
