language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_type_in_path_dep.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

import example_module
fn make_var() -> example_module.Rec {
                                ↑    
  example_module.Var1(1)
}

----- Jumped to `dep/src/example_module.gleam`

pub type Rec {
↑▔▔▔▔▔▔▔▔▔▔▔  
  Var1(Int)
  Var2(Int, Int)
}
