language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_unqualified_function.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

import wibble.{wobble}
fn main() {
  wobble()
   ↑      
}

----- Jumped to `src/wibble.gleam`
pub fn wobble() {}
↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔
