language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_definition_unqualified_imported_module_records.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

import example_module.{Var1}
fn main() {
  Var1(1)
   ↑     
}

----- Jumped to `src/example_module.gleam`

pub type Rec {
  Var1(Int)
  ↑▔▔▔▔▔▔▔▔
  Var2(Int, Int)
}
