language-server/src/tests/snapshots/gleam_language_server__tests__definition__goto_defintion_type_alias_of_an_alias.snap
---
source: language-server/src/tests/definition.rs
expression: output
---
----- Jumping from `src/app.gleam`

type One = Int
type Two = One

fn wibble() -> Two {
               ↑    
  0
}

----- Jumped to `src/app.gleam`

type One = Int
type Two = One
↑▔▔▔▔▔▔▔▔▔▔▔▔▔

fn wibble() -> Two {
  0
}
